    since the snap's /tmp is not accessible to the user.  (LP: #1646968)
  * When sparse copying the resulting disk image, don't try to preserve
    mode,ownership,timestamps.  Over remote file systems (e.g. afp, hgfs)
    this can fail.  Over local file systems, they'll be preserved anyway.
    (LP: #1637554)
  * d/tests/mount: Switch to the stable channel for snaps.

 -- Barry Warsaw <barry@ubuntu.com>  Thu, 01 Dec 2016 17:33:19 -0500

ubuntu-image (0.12+17.04ubuntu1) zesty; urgency=medium

  * Revert previous change which sorted structure volumes by their
    offset.  Instead, we preserve gadget.yaml order for purposes of
    partition numbering, but we still provide implicit offsets when they
    are missing, and we still sanity check for partition overlap.
    (LP: #1642999)
  * Provide human-readable error messages on gadget.yaml parser failures,
    not Python tracebacks (unless --debug is given).  (LP: #1617421)
  * Change the way we invoke the autopkgtests.
    - Use a standard d/t/control file instead of d/t/control.autodep8.  We
      were only using the Python 3 import test anyway.
    - Add an import.sh stanza to reproduce the Python 3 import bits we
      lost by removing autodep8.
    - Turn the `tox -e coverage` Test-Command into a separate test
      script so that we can manipulate the $UBUNTU_IMAGE_CODENAME
      environment variable.  This is used by tox.ini to select an
      appropriate *-coverage.ini file since Xenial does not and cannot
      cover certain code paths.  Everything after Xenial gets named 'devel'.
    - Narrow the dependencies so that they aren't just importing all
      binary packages.  The effects may be similar, but EIBTI.
  * d/control: Drop Testsuite header; we're not doing autodep8 anymore.
  * Rename the environment variable $UBUNTUIMAGE_MOCK_SNAP to
    $UBUNTU_IMAGE_MOCK_SNAP for consistency.
  * Skip some tests which touch the actual store when running without
    network access (e.g. during package build time).